calc class upadates

--- a/force-app/main/default/classes/Calculator.cls
+++ b/force-app/main/default/classes/Calculator.cls
@@ -3,7 +3,14 @@ public with sharing class Calculator {
 
 
     }
-    public void add(Integer a, integer b){
+    public Integer add(Integer a, integer b){
+        return a+b;
+    }
+    public integer substract(Integer a, integer b){
+        return a-b;
+    }
+
+    public Integer multiplication(Integer a,integer b){
         return a*b;
     }
 }
