Added Add method in Calc class

--- a/force-app/main/default/classes/Calculator.cls
+++ b/force-app/main/default/classes/Calculator.cls
@@ -1,8 +1,16 @@
+/*
+ Version                Date            Desc
+ 1.0                    14-02-2021      Add method implemented.
+*/
+
 public with sharing class Calculator {
     public Calculator() {
 
 
     }
-    
+
+    public Integer add(Integer a, Integer b){
+        return a*b;
+    }
     
 }
