--- a/force-app/main/default/classes/Calculator.cls
+++ b/force-app/main/default/classes/Calculator.cls
@@ -10,6 +10,10 @@ public with sharing class Calculator {
 
 
     }
+
+    public Integer sub(Integer a, Integer b ){
+        return a-b;
+    }
     
     
 }
